[package]
name = "rust-esp"
version = "0.1.0"
features = ["esp32"]
authors = ["josoriom <josoriom93@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = [
  "esp32",
  "panic-handler",
  "exception-handler",
  "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32", "log"] }

log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi = { version = "0.1.1", features = ["esp32", "wifi", "ble"] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "0db8fcb", features = [
  "macros",
] }
smoltcp = { version = "0.10.0", default-features = false, features = [
  "proto-igmp",
  "proto-ipv4",
  "socket-tcp",
  "socket-icmp",
  "socket-udp",
  "medium-ethernet",
  "proto-dhcpv4",
  "socket-raw",
  "socket-dhcpv4",
] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
embassy-executor = "0.4.0"
