[package]
name = "rust-esp"
version = "0.1.0"
authors = ["josoriom <josoriom93@gmail.com>"]
edition = "2021"
license = "MIT"

[profile.dev]
opt-level = 3
debug = true

[[example]]
name = "debug"
path = "src/debug.rs"

[dependencies]
defmt = { version = "=0.3.5", optional = true }
esp32-hal = { version = "0.17.0", features = [
  "rt",
  "xtal-40mhz",
], optional = true }
esp-backtrace = { version = "0.9.0", features = [
  "esp32",
  "panic-handler",
  "exception-handler",
  "print-uart",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "medium-ethernet",
  "socket-raw",
], optional = true }
critical-section = { version = "1.1.1" }
log = { version = "0.4.20", optional = true }
embedded-svc = { version = "0.26.1", optional = true }
enumset = { version = "1.1.3", default-features = false, optional = true }
linked_list_allocator = { version = "0.10.5", default-features = false, features = [
  "const_mut_refs",
] }
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.0", optional = true }
embedded-hal-async = { version = "1.0.0-rc.2" }
fugit = { version = "0.3.7" }
heapless = { version = "0.8.0", default-features = false }
num-derive = { version = "0.4" }
num-traits = { version = "0.2", default-features = false }
esp-wifi-sys = { version = "0.1.0", features = ["esp32"] }
embassy-sync = { version = "0.5.0", optional = true }
embassy-futures = { version = "0.1.0", optional = true }
embassy-net = { version = "0.2.1", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
], optional = true }
toml-cfg = { version = "0.1.3" }
libm = { version = "0.2.8" }
cfg-if = { version = "1.0.0" }
portable-atomic = { version = "1.5", default-features = false }
portable_atomic_enum = { version = "0.3.0", features = ["portable-atomic"] }
futures-util = { version = "0.3.28", default-features = false, features = [
  "portable-atomic",
] }
atomic-waker = { version = "1.1.2", default-features = false, features = [
  "portable-atomic",
] }
esp-alloc = { version = "0.3.0" }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "0db8fcb", features = [
  "macros",
  "async",
] }
esp-println = { version = "0.8.0", features = ["log", "esp32"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "a69545dc4c053b9cc9a7398df9250d16834526b5", version = "0.1.1", features = [
  "esp32",
  "wifi",
  "ble",
  "async",
] }
embassy-executor = { version = "0.4.0", package = "embassy-executor", features = [
  "nightly",
  "integrated-timers",
] }

[build-dependencies]
toml-cfg = { version = "0.1.3" }

[dev-dependencies]
esp-println = { version = "0.8.0", features = ["log", "esp32"] }
esp-backtrace = { version = "0.9.0", features = [
  "esp32",
  "panic-handler",
  "exception-handler",
  "print-uart",
] }
embassy-executor = { version = "0.4.0", package = "embassy-executor", features = [
  "nightly",
  "integrated-timers",
] }
embassy-time = { version = "0.2.0" }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "0db8fcb", features = [
  "macros",
  "async",
] }
embedded-hal-async = { version = "1.0.0-rc.2" }
log = { version = "0.4.20" }
static_cell = { version = "2.0", features = ["nightly"] }

[patch.crates-io]
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor-macros", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-futures", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }


[features]
default = ["esp32"]
esp32 = [
  "esp32-hal",
  "esp-wifi-sys/esp32",
  "esp-println/esp32",
  "esp-backtrace/esp32",
]
# async features
async = [
  "dep:embassy-sync",
  "dep:embassy-futures",
  "dep:embedded-io-async",
  "esp32-hal?/embassy",
  "esp32-hal?/async",
]

embassy-net = ["dep:embassy-net", "async"]

# misc features
coex = []
wifi-logs = []
dump-packets = []
smoltcp = ["dep:smoltcp"]
utils = ["smoltcp"]
enumset = []
wifi = ["dep:enumset", "dep:embedded-svc"]
ble = ["esp32-hal?/bluetooth"]
phy-enable-usb = []
ps-min-modem = []
ps-max-modem = []
esp-now = ["wifi"]
ipv6 = ["wifi", "utils", "smoltcp?/proto-ipv6"]
ipv4 = ["wifi", "utils", "smoltcp?/proto-ipv4"]
tcp = ["ipv4", "smoltcp?/socket-tcp"]
udp = ["ipv4", "smoltcp?/socket-udp"]
icmp = ["ipv4", "smoltcp?/socket-icmp"]
igmp = ["ipv4", "smoltcp?/proto-igmp"]
dns = ["udp", "smoltcp?/proto-dns", "smoltcp?/socket-dns"]
dhcpv4 = ["wifi", "utils", "smoltcp?/proto-dhcpv4", "smoltcp?/socket-dhcpv4"]
defmt = ["dep:defmt", "smoltcp?/defmt", "esp32-hal?/defmt"]
log = ["dep:log", "esp32-hal?/log"]

[package.metadata.docs.rs]
features = [
  "esp32c3",
  "wifi",
  "ble",
  "async",
  "embassy-net",
  "esp32c3-hal/embassy-time-systick",
  "esp32c3-hal/default",
]
default-target = "riscv32imc-unknown-none-elf"
